bld/wipfc/test/pos/pos9.ipf
.nameit symbol=pos text='Positive'

:userdoc.
:title.&pos. 9&per.
:docprof.
:h1 res=1.Heading 1
:i1 id='1'.Heading 1
:p.Text inside of a paragraph, with punctuation and an entity reference&per.
:p.This is part of the &pos. test series&per.
:euserdoc.


