bld/wipfc/test/neg/neg5.ipf
:userdoc.
:title.Negative 5
:docprof.

.* This should generate a warning and be ignored
.nameit symbol=rarrow text='Right arrow'

:h1.Nameit test
:p.&rarrow.

:euserdoc.

